--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@
 }
 
 /* body */
-
+/* 
 body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
@@ -37,7 +37,7 @@ body {
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
   background-color: var(--primary-white-color);
-}
+} */
 
 /* reset start */
 
@@ -83,7 +83,7 @@ img {
 
 /* header */
 
-.header-container {
+/* .header-container {
   display: flex;
   align-items: center;
   margin-bottom: 96px;
@@ -183,9 +183,24 @@ img {
 
 .normalize {
   font-style: normal;
-}
+} */
 
-@media screen (min-width: 320px) {
+@media screen and (min-width: 320px) {
+
+  .logo-header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    margin-right: 76px;
+  
+    color: var(--accent-text);
+    font-family: "Raleway", sans-serif;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.17em;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
 }
 
 /* main */
