--- a/css/styles.css
+++ b/css/styles.css
@@ -81,117 +81,41 @@ img {
   align-items: center;
 }
 
-/* header */
-
-/* .header-container {
-  display: flex;
-  align-items: center;
-  margin-bottom: 96px;
-}
-
-.header-position {
-  border-bottom: 1px solid var(--accent);
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-}
-
-.header-nav {
-  display: flex;
-  align-items: center;
-  margin-right: auto;
-}
-
-.adress-list {
-  display: flex;
-  align-items: center;
-  gap: 40px;
-}
-
-.header-list {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  gap: 40px;
-}
-
-.adr {
-  transition: color var(--fast-anim);
-
-  display: block;
-  padding-top: 24px;
-  padding-bottom: 24px;
-
-  color: var(--primary-text-color);
-}
-
-.header-title {
-  position: relative;
-
-  display: block;
-  font-weight: 500;
-  padding-top: 24px;
-  padding-bottom: 24px;
-  color: var(--title-text);
-
-  transition: color var(--fast-anim);
-}
-
-.header-title::after {
-  content: "";
-  position: absolute;
-  bottom: -1px;
-  left: 0;
-
-  display: block;
-  width: 100%;
-  height: 4px;
-
-  border-radius: 2px;
-
-  transition: color var(--fast-anim);
-}
-
-.header-title.current {
-  color: var(--pressed-state);
-}
-
-.header-title.current::after,
-.header-title:hover::after,
-.header-title:focus::after {
-  background-color: var(--pressed-state);
-}
-
-.logo-header {
-  padding-top: 24px;
-  padding-bottom: 24px;
-  margin-right: 76px;
-
-  color: var(--accent-text);
-  font-family: "Raleway", sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.17em;
-  display: flex;
-  align-items: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-}
-
-.logo-up {
-  color: var(--title-text);
-}
-
-.normalize {
-  font-style: normal;
-} */
-
 @media screen and (min-width: 320px) {
+  .body {
+    min-width: 320px;
+    overflow-x: hidden;
+  }
+
+  /* header */
+
+  .header-container {
+    align-items: center;
+  }
+
+  .container {
+    display: flex;
+    padding: 0 15px;
+    justify-content: space-between;
+  }
+
+  .header-nav {
+    align-items: center;
+    margin-right: auto;
+  }
+
+  .header-list {
+    display: none;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 40px;
+  }
 
   .logo-header {
     padding-top: 24px;
     padding-bottom: 24px;
     margin-right: 76px;
-  
+
     color: var(--accent-text);
     font-family: "Raleway", sans-serif;
     font-weight: 800;
@@ -201,7 +125,107 @@ img {
     align-items: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+  }
+
+  .adress-list {
+    display: none;
+    align-items: center;
+    gap: 40px;
+  }
+
+  .header-position {
+    border-bottom: 1px solid var(--accent);
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  }
+
+  .adr {
+    transition: color var(--fast-anim);
+
+    display: block;
+    padding-top: 24px;
+    padding-bottom: 24px;
+
+    color: var(--primary-text-color);
+  }
+  .header-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 96px;
+  }
+
+  .adress-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+  }
+
+  .header-list {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 40px;
+  }
+
+  .adr {
+    transition: color var(--fast-anim);
+
+    display: block;
+    padding-top: 24px;
+    padding-bottom: 24px;
+
+    color: var(--primary-text-color);
+  }
+
+  .header-title {
+    position: relative;
+
+    display: block;
+    font-weight: 500;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    color: var(--title-text);
+
+    transition: color var(--fast-anim);
+  }
+
+  .header-title::after {
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+
+    display: block;
+    width: 100%;
+    height: 4px;
+
+    border-radius: 2px;
+
+    transition: color var(--fast-anim);
+  }
+
+  .header-title.current {
+    color: var(--pressed-state);
+  }
+
+  .header-title.current::after,
+  .header-title:hover::after,
+  .header-title:focus::after {
+    background-color: var(--pressed-state);
+  }
+
+  .logo-up {
+    color: var(--title-text);
+  }
+
+  .normalize {
+    font-style: normal;
+  }
 }
+
+/* @media screen and (min-width: 769px) and (max-width: 1158px) {
+
+} */
 
 /* main */
 
