--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@
 }
 
 /* body */
-/* 
+
 body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
@@ -37,7 +37,7 @@ body {
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
   background-color: var(--primary-white-color);
-} */
+}
 
 /* reset start */
 
@@ -81,25 +81,114 @@ img {
   align-items: center;
 }
 
+.header-position {
+  border-bottom: 1px solid var(--accent);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.adr {
+  transition: color var(--fast-anim);
+
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
+
+  color: var(--primary-text-color);
+}
+/* .header-container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 96px;
+} */
+
+.adress-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.header-list {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 40px;
+}
+
+.adr {
+  transition: color var(--fast-anim);
+
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
+
+  color: var(--primary-text-color);
+}
+
+.header-title {
+  position: relative;
+
+  display: block;
+  font-weight: 500;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  color: var(--title-text);
+
+  transition: color var(--fast-anim);
+}
+
+.header-title::after {
+  content: "";
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+
+  border-radius: 2px;
+
+  transition: color var(--fast-anim);
+}
+
+.header-title.current {
+  color: var(--pressed-state);
+}
+
+.header-title.current::after,
+.header-title:hover::after,
+.header-title:focus::after {
+  background-color: var(--pressed-state);
+}
+
+.logo-up {
+  color: var(--title-text);
+}
+
+.normalize {
+  font-style: normal;
+}
+
+/* header  */
+
 @media screen and (min-width: 320px) {
-  .body {
-    min-width: 320px;
-    overflow-x: hidden;
-  }
-
-  /* header */
-
   .header-container {
     align-items: center;
   }
 
   .container {
     display: flex;
+    align-content: center;
+    justify-content: baseline;
+    width: 428px;
+    margin: 0 auto;
     padding: 0 15px;
     justify-content: space-between;
   }
 
   .header-nav {
+    display: flex;
     align-items: center;
     margin-right: auto;
   }
@@ -133,99 +222,23 @@ img {
     gap: 40px;
   }
 
-  .header-position {
-    border-bottom: 1px solid var(--accent);
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-  }
-
-  .adr {
-    transition: color var(--fast-anim);
-
-    display: block;
-    padding-top: 24px;
-    padding-bottom: 24px;
-
-    color: var(--primary-text-color);
-  }
-  .header-container {
-    display: flex;
-    align-items: center;
-    margin-bottom: 96px;
-  }
-
-  .adress-list {
-    display: flex;
-    align-items: center;
-    gap: 40px;
-  }
-
-  .header-list {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    gap: 40px;
-  }
-
-  .adr {
-    transition: color var(--fast-anim);
-
-    display: block;
-    padding-top: 24px;
-    padding-bottom: 24px;
-
-    color: var(--primary-text-color);
-  }
-
-  .header-title {
-    position: relative;
-
-    display: block;
-    font-weight: 500;
-    padding-top: 24px;
-    padding-bottom: 24px;
-    color: var(--title-text);
-
-    transition: color var(--fast-anim);
-  }
-
-  .header-title::after {
-    content: "";
-    position: absolute;
-    bottom: -1px;
-    left: 0;
-
-    display: block;
-    width: 100%;
-    height: 4px;
-
-    border-radius: 2px;
-
-    transition: color var(--fast-anim);
-  }
-
-  .header-title.current {
-    color: var(--pressed-state);
-  }
-
-  .header-title.current::after,
-  .header-title:hover::after,
-  .header-title:focus::after {
-    background-color: var(--pressed-state);
-  }
-
-  .logo-up {
-    color: var(--title-text);
-  }
-
-  .normalize {
-    font-style: normal;
+  .burger-btn {
+    background: transparent;
+    border: none;
   }
 }
 
-/* @media screen and (min-width: 769px) and (max-width: 1158px) {
+@media screen (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
 
-} */
+@media screen (min-width: 1158px) {
+  .container {
+    max-width: 1440px;
+  }
+}
 
 /* main */
 
