--- a/css/styles.css
+++ b/css/styles.css
@@ -173,6 +173,10 @@ img {
 /* header  */
 
 @media screen and (min-width: 320px) {
+  body {
+    overflow-x: hidden;
+  }
+
   .header-container {
     align-items: center;
   }
@@ -180,7 +184,6 @@ img {
   .container {
     display: flex;
     align-content: center;
-    justify-content: baseline;
     width: 428px;
     margin: 0 auto;
     padding: 0 16px;
@@ -191,7 +194,6 @@ img {
     display: flex;
     align-items: center;
     margin-right: auto;
-    justify-content: space-between;
   }
 
   .logo-header {
@@ -223,7 +225,7 @@ img {
 }
 
 @media screen (min-width: 320px) and (max-width: 767px) {
-  .header-list > .header-title {
+  .header-list {
     display: none;
   }
 }
