--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,7 @@ img {
 
 /* header  */
 
-@media screen (min-width: 320px) {
+@media screen and (min-width: 320px) {
   body {
     overflow-x: hidden;
   }
@@ -226,13 +226,13 @@ img {
   }
 }
 
-@media screen (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .header-list {
     display: none;
   }
 }
 
-@media screen (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .container {
     width: 768px;
   }
@@ -250,7 +250,7 @@ img {
   }
 }
 
-@media screen (min-width: 1158px) {
+@media screen and (min-width: 1158px) {
   .container {
     max-width: 1440px;
   }
