--- a/css/styles.css
+++ b/css/styles.css
@@ -102,27 +102,11 @@ img {
   margin-bottom: 96px;
 }
 
-.adress-list {
-  display: flex;
-  align-items: center;
-  gap: 40px;
-}
-
 .header-list {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   gap: 40px;
-}
-
-.adr {
-  transition: color var(--fast-anim);
-
-  display: block;
-  padding-top: 24px;
-  padding-bottom: 24px;
-
-  color: var(--primary-text-color);
 }
 
 .header-title {
@@ -216,8 +200,6 @@ img {
 
   .adress-list {
     display: none;
-    align-items: center;
-    gap: 40px;
   }
 
   .burger-btn {
@@ -243,10 +225,29 @@ img {
 
   .header-list {
     display: flex;
+    margin-right: 122px;
   }
 
   .burger-btn {
     display: none;
+  }
+
+  .adress-list {
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+    line-height: 1.16em;
+    letter-spacing: 0.04em;
+  }
+
+  .adr {
+    transition: color var(--fast-anim);
+
+    display: block;
+    padding-top: 16px;
+    padding-bottom: 16px;
+
+    color: var(--primary-text-color);
   }
 }
 
@@ -255,8 +256,20 @@ img {
     max-width: 1440px;
   }
 
+  .adress-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    letter-spacing: 0.02em;
+  }
+
   .logo-header {
     margin-right: 76px;
+  }
+
+  .adr {
+    padding-top: 24px;
+    padding-bottom: 24px;
   }
 }
 
