--- a/css/styles.css
+++ b/css/styles.css
@@ -634,7 +634,15 @@ img {
   }
 }
 
-/*Team section */
+/* <!-- About section --> */
+
+@media screen and (min-width: 320px) and (max-width: 1157px) {
+  .section-about {
+    display: none;
+  }
+}
+
+/* <!-- Team section --> */
 
 /* .team-list {
   display: flex;
