--- a/css/styles.css
+++ b/css/styles.css
@@ -473,8 +473,6 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  /* min-height: 432px; */
-  /* max-width: 767px; */
   margin: 0 auto;
   padding: 188px 0;
 }
@@ -489,7 +487,6 @@ img {
         rgba(46, 47, 66, 0.7)
       ),
       url("../images/Dark-bg-mob@2x.jpg");
-    /* max-width: 767px; */
   }
 }
 
@@ -501,8 +498,6 @@ img {
         rgba(46, 47, 66, 0.7)
       ),
       url("../images/Dark-bg-tablet.jpg");
-    /* min-height: 436px;
-    max-width: 1157px; */
   }
 }
 
@@ -516,8 +511,6 @@ img {
         rgba(46, 47, 66, 0.7)
       ),
       url("../images/Dark-bg-tablet@2x.jpg");
-    /* min-height: 436px;
-    max-width: 1157px; */
   }
 }
 
@@ -529,8 +522,6 @@ img {
         rgba(46, 47, 66, 0.7)
       ),
       url("../images/people-office-desktop.jpg");
-    /* min-height: 600px;
-    max-width: 1440px; */
   }
 }
 
@@ -544,8 +535,6 @@ img {
         rgba(46, 47, 66, 0.7)
       ),
       url("../images/people-office-desktop@2x.jpg");
-    /* min-height: 600px;
-    max-width: 1440px; */
   }
 }
 
@@ -602,12 +591,12 @@ img {
   margin-bottom: 8px;
 }
 
-/* @media screen and (min-width: 428px) and (max-width: 767px) {
-  .group-list {
-  }
-} */
+/* <!-- Advantages section --> */
 
-@media screen and (min-width: 428px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
+}
+
+@media screen and (min-width: 320px) {
   .advantages-icon {
     display: none;
   }
@@ -678,9 +667,6 @@ img {
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  .container {
-    display: flex;
-    justify-content: center;
 }
 
 /* Customers section */
