--- a/css/styles.css
+++ b/css/styles.css
@@ -667,6 +667,9 @@ img {
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
+  .card-set-adv-about {
+    mar
+  }
 }
 
 /* Customers section */
@@ -858,9 +861,22 @@ img {
   gap: 24px;
 } */
 
+@media screen and (min-width: 320px) and (max-width: 767px) {}
+
+
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+   .footer-container {
+    width: 584px;
+    align-items: flex-start; 
+    margin: 0 auto;
+    padding-left: 16px;
+    padding-right: 16px 
+  }
+} 
+
 /* Modal style */
 
-/* .backdrop.is-hidden {
+.backdrop.is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -1049,12 +1065,12 @@ img {
   fill: transparent;
   /* transition: background-color var(--fast-anim) border var(--fast-anim) fill
     var(--fast-anim); */
-/* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
+  }
 
-/* .link-policy {
+.link-policy {
   color: var(--accent-text);
 }
 
@@ -1097,4 +1113,11 @@ img {
   color: var(--primary-white-color);
   background-color: var(--accent-text);
   transition: background-color var(--fast-anim);
-} */
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .modal {
+    height: 100%;
+    width: 100%;
+  }
+}
