--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
   --indent: 24px;
   --items: 3;
 
+  --indentwo: 72px;
   --items2: 2;
 
   --caption: 1.1em;
@@ -240,7 +241,7 @@ img {
 
 @media screen and (min-width: 1158px) {
   .container {
-  max-width: 1158px;
+    max-width: 1158px;
   }
 
   .adress-list {
@@ -282,27 +283,10 @@ img {
   row-gap: 48px;
 }
 
-.card-set-adv-about {
-  display: flex;
-  flex-wrap: wrap;
-  gap: var(--indent);
-}
-
-.team {
-  --items: 4;
-}
-
 .web-list {
   padding: 32px 16px;
   border: 1px solid var(--accent);
   border-top: none;
-}
-
-.group-list {
-  display: flex;
-  justify-content: center;
-
-  gap: var(--indent);
 }
 
 .filter-position {
@@ -342,15 +326,6 @@ img {
 .link-portfolio:hover .pop-up-text,
 .link-portfolio:focus .pop-up-text {
   transform: translateY(0%);
-}
-
-.section {
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-
-.section-about {
-  padding-bottom: 120px;
 }
 
 .subtitle {
@@ -394,7 +369,7 @@ img {
   font-family: inherit;
   font-size: 16px;
   font-weight: 500;
-  line-height: 1.5;
+  line-height: 1.5em;
   letter-spacing: 0.04em;
   cursor: pointer;
 
@@ -558,16 +533,6 @@ img {
   color: var(--pressed-state);
 }
 
-.title-secondary {
-  margin-bottom: 8px;
-
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2em;
-  letter-spacing: 0.02em;
-  color: var(--title-text);
-}
-
 .center {
   text-align: center;
 }
@@ -592,28 +557,73 @@ img {
 
 /* <!-- Advantages section --> */
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
-}
-
 @media screen and (min-width: 320px) {
+  .title-secondary {
+    text-align: center;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11em;
+  }
+
   .advantages-icon {
     display: none;
+  }
+
+  .group-list {
+    display: flex;
+    gap: var(--indent);
+    flex-wrap: wrap;
+  }
+
+  .section {
+    padding-top: 96px;
+    padding-bottom: 96px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team {
+    --items: 4;
+  }
+
+  .title-secondary {
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 1157px) {
+  .par {
+    font-weight: 500;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1157px) {
-  .group-list {
-    display: flex;
-    gap: 24px;
-    flex-wrap: wrap;
-  }
-
-  .card-list-item {
+  .card-list-item.team {
     width: calc((100% - var(--indent) * (var(--items2) - 1)) / var(--items2));
   }
 }
 
 @media screen and (min-width: 1158px) {
+  .group-list {
+    display: flex;
+    justify-content: center;
+  }
+
+  .section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+
+  .title-secondary {
+    margin-bottom: 8px;
+
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2em;
+    letter-spacing: 0.02em;
+    color: var(--title-text);
+  }
+
   .advantages-icon {
     display: flex;
   }
@@ -630,12 +640,18 @@ img {
   }
 }
 
+@media screen and (min-width: 1158px) {
+  .section-about {
+    padding-bottom: 120px;
+  }
+}
+
 /* <!-- Team section --> */
 
 .team-list {
   display: flex;
   justify-content: center;
-  gap: 24px;
+  gap: var(--indent);
 }
 
 .team-item {
@@ -665,9 +681,34 @@ img {
   fill: var(--light-mode);
 }
 
+@media screen and (min-width: 320px) {
+  .card-set-adv-about {
+    display: flex;
+    flex-wrap: wrap;
+    gap: var(--indent);
+  }
+}
+
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .card-set-adv-about {
-    mar
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 1157px) {
+  .card-set-adv-about {
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+}
+
+@media screen and (min-width: 1158px) {
+  .card-set-adv-about {
+    display: flex;
+    flex-wrap: wrap;
+    gap: var(--indent);
   }
 }
 
@@ -860,18 +901,18 @@ img {
   gap: 24px;
 } */
 
-@media screen and (min-width: 320px) and (max-width: 767px) {}
+@media screen and (min-width: 320px) and (max-width: 767px) {
+}
 
-
-@media screen and (min-width: 768px) and (max-width: 1157px) {
-   .footer-container {
+/* @media screen and (min-width: 768px) and (max-width: 1157px) {
+  .footer-container {
     width: 584px;
-    align-items: flex-start; 
+    align-items: flex-start;
     margin: 0 auto;
     padding-left: 16px;
-    padding-right: 16px 
+    padding-right: 16px;
   }
-} 
+} */
 
 /* Modal style */
 
@@ -1064,10 +1105,10 @@ img {
   fill: transparent;
   /* transition: background-color var(--fast-anim) border var(--fast-anim) fill
     var(--fast-anim); */
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+}
 
 .link-policy {
   color: var(--accent-text);
@@ -1116,7 +1157,8 @@ img {
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .modal {
-    height: 100%;
-    width: 100%;
+    max-height: 100vh;
+    overflow-y: hidden;
+    max-width: 100%;
   }
 }
