--- a/css/styles.css
+++ b/css/styles.css
@@ -716,7 +716,7 @@ img {
 
 /* Customers section */
 
-/* .custom-title {
+.custom-title {
   line-height: var(--caption);
 }
 
@@ -752,7 +752,7 @@ img {
 
 .decoration-icon {
   fill: currentColor;
-} */
+}
 
 /* Footer section */
 
@@ -865,12 +865,6 @@ img {
   margin-left: 16px;
 }
 
-.form-footer-email {
-  display: block;
-  align-items: center;
-  margin-left: 80px;
-}
-
 .footer-ipt {
   padding: 8px 16px;
   width: 264px;
@@ -903,6 +897,17 @@ img {
   gap: 24px;
 }
 
+@media screen and (min-width: 320px) {
+  .logo-part {
+    margin-right: 24px;
+    margin-bottom: 72px;
+  }
+
+  .form-footer-email {
+    align-items: center;
+  }
+}
+
 @media screen and (min-width: 320px) and (max-width: 767px) {
 }
 
@@ -913,6 +918,16 @@ img {
     margin: 0 auto;
     padding-left: 16px;
     padding-right: 16px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .logo-part {
+    margin-right: 120px;
+  }
+
+  .form-footer-email {
+    margin-left: 80px;
   }
 }
 
