--- a/css/styles.css
+++ b/css/styles.css
@@ -720,12 +720,6 @@ img {
   line-height: var(--caption);
 }
 
-.custom-list {
-  display: flex;
-  align-items: center;
-  gap: 24px;
-}
-
 .custom-item {
   width: calc((100% - 120px) / 6);
   height: 88px;
@@ -752,6 +746,20 @@ img {
 
 .decoration-icon {
   fill: currentColor;
+}
+
+@media screen and (min-width: 320px) {
+  .custom-list {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+  .custom-list {
+    max-width: 552px;
+  }
 }
 
 /* Footer section */
