--- a/css/styles.css
+++ b/css/styles.css
@@ -685,6 +685,8 @@ img {
   .card-set-adv-about {
     display: flex;
     flex-wrap: wrap;
+    margin: 0 auto;
+    justify-content: center;
   }
 }
 
@@ -694,15 +696,10 @@ img {
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 1157px) {
-  .card-set-adv-about {
-    justify-content: center;
-  }
-}
-
 @media screen and (min-width: 768px) and (max-width: 1157px) {
   .card-set-adv-about.crew {
     max-width: 552px;
+    gap: 64px 24px;
   }
 }
 
@@ -747,31 +744,35 @@ img {
   .custom-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 16px;
+    gap: 72px 16px;
     justify-content: center;
+    /* margin: 0 auto; */
+  }
+  .custom-item {
+    height: 88px;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .custom-list {
     max-width: 396px;
-    flex-wrap: wrap;
-    gap: 16px;
-    justify-content: center;
   }
 
   .custom-item {
-    /* width: 188px;
-    height: 88px; */
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 56px;
+    height: 88px;
+    width: calc((100% - 32px) / 2);
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1157px) {
   .custom-list {
     max-width: 552px;
+    gap: 72px 24px;
+    margin: 0 auto;
+  }
+
+  .custom-item {
+    width: calc((100% - 48px) / 3);
   }
 }
 
