--- a/css/styles.css
+++ b/css/styles.css
@@ -746,7 +746,6 @@ img {
     flex-wrap: wrap;
     gap: 72px 16px;
     justify-content: center;
-    /* margin: 0 auto; */
   }
   .custom-item {
     height: 88px;
@@ -755,7 +754,7 @@ img {
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .custom-list {
-    max-width: 396px;
+    max-width: 428px;
   }
 
   .custom-item {
@@ -820,10 +819,6 @@ img {
 
 .logo-down {
   color: var(--light-mode);
-}
-
-.logo-part {
-  margin-right: 120px;
 }
 
 .title-footer {
@@ -917,67 +912,94 @@ img {
   margin-bottom: 16px;
 }
 
-.form-footer {
-  display: flex;
-  gap: 24px;
-}
-
 @media screen and (min-width: 320px) {
-  .logo-part {
-    margin-right: 24px;
-    margin-bottom: 72px;
-  }
-
-  .form-footer-email {
-    align-items: center;
-  }
-
   .footer-container {
     margin: 0 auto;
     max-width: 428px;
   }
 
+  .title-footer {
+    text-align: center;
+  }
+
   .footer-position {
     width: 264px;
   }
+
+  .all-footer {
+    display: flex;
+    align-items: baseline;
+    flex-wrap: wrap;
+    gap: 72px;
+    justify-content: center;
+  }
+  .logo-part {
+    text-align: center;
+  }
+
+  .footer-text {
+    text-align: left;
+  }
+
+  .footer-ipt {
+  }
 }
 
-@media screen (min-width: 320px) and (max-width: 1157px) {
+@media screen (min-width: 320px) and (max-width: 767px) {
   .all-footer {
-    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 767px) {
+  .form-footer {
+    display: flex;
+    gap: 24px;
+  }
+
+  .all-footer {
+    gap: 0;
+    justify-content: flex-start;
   }
 
   .logo-part {
-    display: inline-block;
+    margin-right: 24px;
+    margin-bottom: 72px;
   }
-}
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+  .title-footer {
+    text-align: left;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1157px) {
   .footer-container {
-    max-width: 584px;
+    max-width: 552px;
   }
 }
 
 @media screen and (min-width: 1158px) {
   .logo-part {
     margin-right: 120px;
+    margin-bottom: 0px;
   }
 
   .footer-container {
     display: flex;
-  }
-
-  .all-footer {
-    align-items: baseline;
-    justify-content: center;
+    max-width: 1128px;
   }
 
   .form-footer-email {
     margin-left: 80px;
   }
+}
+
+.footer-container {
+  border: 1px solid red;
+}
+
+.custom-list {
+  border: 1px solid green;
 }
 
 /* Modal style */
