--- a/css/styles.css
+++ b/css/styles.css
@@ -915,12 +915,13 @@ img {
 @media screen and (min-width: 320px) {
   .footer-container {
     margin: 0 auto;
-    max-width: 396px;
+    max-width: 428px;
+    padding: 0 16px;
   }
 
-  .form-footer-email {
+  /* .form-footer-email {
     width: 100%;
-  }
+  } */
 
   .title-footer {
     text-align: center;
@@ -931,7 +932,7 @@ img {
   }
 
   .footer-lab {
-    width: 100%;
+    /* width: 100%; */
     margin-bottom: 16px;
   }
 
@@ -958,14 +959,26 @@ img {
     max-width: 100%;
   }
 
+  /* .footer-ipt {
+    width: 100%;
+  } */
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .all-footer {
+    justify-content: center;
+  }
+
   .footer-ipt {
     width: 100%;
   }
-}
 
-@media screen (min-width: 320px) and (max-width: 767px) {
-  .all-footer {
-    justify-content: center;
+  .form-footer-email {
+    width: 100%;
+  }
+
+  .footer-lab {
+    width: 100%;
   }
 }
 
@@ -973,6 +986,7 @@ img {
   .form-footer {
     display: flex;
     gap: 24px;
+    max-width: 100%;
   }
 
   .footer-lab {
@@ -995,13 +1009,30 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1157px) {
+@media screen and (min-width: 768px) {
   .footer-container {
     max-width: 552px;
+    padding: 0;
   }
+
+  /* .form-footer-email {
+    max-width: 100%;
+  }
+
+  .footer-lab {
+    max-width: 10%;
+  }
+
+  .footer-ipt {
+    max-width: 100%;
+  } */
 }
 
 @media screen and (min-width: 1158px) {
+  .footer-container {
+    max-width: 1158px;
+  }
+
   .logo-part {
     margin-right: 120px;
     margin-bottom: 0px;
