--- a/css/styles.css
+++ b/css/styles.css
@@ -1296,3 +1296,30 @@ img {
     max-width: 100%;
   }
 }
+
+/* <-- Mobile menu -->*/
+
+.mobile-menu {
+  width: 100%;
+  position: fixed;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: var(--modal-overlay);
+  padding-left: 40px;
+  transition: var(--fast-anim);
+  padding: 80px 40px 40px 35px;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
