--- a/css/styles.css
+++ b/css/styles.css
@@ -281,11 +281,9 @@ img {
     transition: transform var(--fast-anim);
     padding: 72px 24px 24px 24px;
 
-    /* max-height: 100vh; */
-    min-height: 796px;
     overflow-y: hidden;
+    height: 100%;
     width: 100%;
-    /* z-index: var(--modal-ndx); */
     background: var(--modal-background);
   }
 
@@ -612,7 +610,6 @@ img {
   }
 
   .headline {
-    max-width: 496px;
     margin-bottom: 72px;
 
     font-weight: 700;
