--- a/css/styles.css
+++ b/css/styles.css
@@ -302,7 +302,6 @@ img {
     display: flex;
     flex-direction: column;
     margin: auto;
-    /* z-index: var(--back-ndx); */
 
     opacity: 0;
     visibility: hidden;
@@ -336,12 +335,10 @@ img {
   }
 
   .burger-menu-list {
-    margin-bottom: 284px;
+    margin-bottom: auto;
   }
 
   .header-mobile-nav {
-    /* position: relative; */
-
     display: block;
     font-weight: 700;
     font-size: 36px;
@@ -355,9 +352,29 @@ img {
     transition: color var(--fast-anim);
   }
 
+  .header-mobile-nav {
+    margin-bottom: 40px;
+  }
+
+  .header-mobile-nav .header-mobile-nav.active {
+    color: var(--pressed-state);
+  }
+
+  .header-mobile-nav.active::after,
+  .header-mobile-nav:hover::after,
+  .header-mobile-nav:focus::after {
+    background-color: var(--pressed-state);
+  }
+
+  .adress-mob {
+    margin-bottom: 48px;
+  }
+
+  .mob-tel {
+    margin-bottom: 40px;
+  }
+
   .adress-call {
-    /* display: flex; */
-    /* flex-direction: column; */
     font-family: "Roboto";
     font-style: normal;
     font-weight: 700;
